site: fix codeblock left padding and spacing tweak

--- a/site/themes/pinniped/assets/scss/_components.scss
+++ b/site/themes/pinniped/assets/scss/_components.scss
@@ -12,6 +12,13 @@ pre code {
     font-size: 14px;
     line-height: 1.6em;
 }
+pre.chroma {
+    padding: 10px;
+    code {
+         padding-left: 0px;
+    }
+}
+
 .highlight pre codesite/sidebar/reorganize {
     font-size: 100%;
 }
